src/styles/room.scss
#page-room{


    font-family: 'Roboto', sans-serif;

    header{
        padding: 24px;
        border-bottom: 1px solid #e2e2e2;

        .content, .menu{
            max-width: 1120px;
            margin: 0 auto;
            display: flex;
            justify-content: space-between;
            align-items: center;

            gap: 16px;

            div{
                .hamburguer-menu{
                    
                    visibility: hidden;
                    img{
                        height: 40px;
                    }
                }
            }

            > div{
                display: flex;
                gap: 16px
            }

            button{
                height: 40px;
            }
        }


        > img{
            max-height: 45px;
        }
    }

    main{
        max-width: 800px;
        margin: 0 auto;

        .room-title{
            margin: 32px 0 24px;
            display: flex;
            align-items: center;

            h1{
                font-family: 'Poppins', sans-serif;
                font-size: 24px;
                color: #29292e
            }
    
            > span{
                margin-left: 16px;
                background: #e559f9;
                border-radius: 999px;
                padding: 8px 16px;
                color: #fff;
                font-weight: 500;
                font-size: 14px;
            }
        }

    }

    form{
        textarea{
            width: 100%;
            border: 0;
            padding: 16px;
            border-radius: 8px;
            background: #fefefe;
            box-shadow: 0 2px 12px rgba(0, 0, 0, 0.04);
            resize: vertical;
            min-height: 130px;
            max-height: 230px;
        }
        .form-footer{
            display: flex;
            justify-content: space-between;
            align-items: center;
            margin-top: 16px;
        }

        .user-info{
            display: flex;
            align-items: center;

            img{
                width: 32px ;
                height: 32px ;
                clip-path: circle();
            }

            span{
                margin-left: 8px;
                color: #29292e;
                font-weight: 500;
                font-size: 14px;
            }
        }

        span{
            font-size: 14px;
            color: #737380;
            font-weight: 500;

            button{
                background: none;
                border: none;
                color: #835AFD;
                text-decoration: underline;
                font-size: 14px;
                cursor: pointer;
            }
        }
    }

    .question-list{
        margin-top: 32px;
        
    }
}


//mobile
@media (max-width: 599px) { 
    #page-room{
        header{
    
            .logo{
                display: none;
            }

            .content {
                .menu{
                    visibility: hidden;
                    background: #f8f8f8;
                    height: 200px;
                    position: absolute;
                    justify-content: center !important;
                    align-items: stretch !important;
                    padding: 20px;
                    flex-direction: column;
                    top: 100px;
                    border-bottom: 1px solid #e2e2e2;
                    right: 0;
                    left: 0;
                    z-index: 10;
                    box-shadow: 0px 2px 6px rgba(0,0,0, 0.1);
                }

                div{
                    flex: 1;

                    .hamburguer-menu{
                        visibility: visible;
                        flex:1;
                        order: 3;
                    }

                    .room-code{
                        flex: 5;
                    }
                }



                .menu.show{
                    visibility: visible;
                }
            }
        }

        main{
            padding: 0 40px;
            padding-bottom: 40px;
        }
    }
 }

 //tablet
@media (min-width: 600px) { 
    
 }

//Desktop
@media (min-width: 1200px) { 
    
 }

